# tokenizer

./: CMakeLists.txt  README.md  WORKFLOW.md  build.sh
include/: BaseTokenizer.hpp  UTF8Filter.hpp
src/: BaseMixinTokenizer.hpp  BaseTokenizer.cpp  FastVLMTokenizer.hpp  GLM5Tokenizer.hpp  Gemma3Tokenizer.hpp  Gemma4Tokenizer.hpp  HunYuanTokenizer.hpp  InternVL3Tokenizer.hpp  KimiK25Tokenizer.hpp  MiniCPM4Tokenizer.hpp  MiniCPM5Tokenizer.hpp  MiniCPMV46Tokenizer.hpp  MiniMaxM2Tokenizer.hpp  PaddleOCRVLTokenizer.hpp  Qwen3Tokenizer.hpp  SmolLM2Tokenizer.hpp  SmolLM3Tokenizer.hpp  SmolVLM2Tokenizer.hpp
src/tokenizer/: tokenizer.cpp  tokenizer_optimized.cpp  tokenizer_optimized.hpp
src/utils/: object_register.hpp
tests/: compare_test.py  convert_tokenizer.py  test_string_create.cpp  test_tokenizer.cpp  test_tokenizer.py  verify_both.py  verify_glm5.py  verify_tokenizer.py
